--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <div id="header">
+        <div id="page">
         <div class="container">
             <nav>
                 <img data-aos="zoom-in-left" data-aos-delay="150" src="image/NAME logo.png" class="logo">
@@ -35,19 +36,26 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text" data-aos="fade-right" data-aos-delay="300">
-                <div class="wrapper">
+                <div id="loop">
+                    <h1><b>HI,</b>I'M MOHD <b><i>TABISH</i></b> <span>HUSSAIN</span> FROM<span><i>INDIA.</i></span></h1>
+                    <h1><b>HI,</b>I'M MOHD <b><i>TABISH</i></b> <span>HUSSAIN</span> FROM<span><i>INDIA.</i></span></h1>
+                    <h1><b>HI,</b>I'M MOHD <b><i>TABISH</i></b> <span>HUSSAIN</span> FROM<span><i>INDIA.</i></span></h1>
+
+                </div>
+                <!-- <div class="wrapper">
                     <ul class="dynamic-txts">
                         <li><span>Developer</span></li>
                         <li><span>YouTuber</span></li>
                         <li><span>Designer</span></li>
                         <li><span>Freelancer</span></li>
                     </ul>
-                </div>
-                <h1>Hi,I'm Mohd <span>Tabish</span><br>Hussain from India</h1>
+                </div> -->
+                <!-- <h1>Hi,I'm Mohd <span>Tabish</span><br>Hussain from India</h1> -->
             </div>
             <div id="hero" class="hero" data-aos="fade-left" data-aos-delay="600">
                 <img src="image/newlog2-removebg.png" alt="">
             </div>
+        </div>
         </div>
     </div>
 
@@ -56,7 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1" data-aos="fade-right" data-aos-delay="300">
-                    <img src="image/IMG_1342.jpg">
+                    <img src="image/aboutme.svg">
                 </div>
                 <div class="about-col-2" data-aos="fade-left" data-aos-delay="600">
                     <h1 class="sub-title">About me</h1>
@@ -82,9 +90,9 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
+                            <li><span>CodeAlpha  Feb 2024 - May 2024 </span><br> Full Stack Web Development Intern</li>
                             <li><span>DESINZIDEAZ 2024-current</span><br>Full Stack Web development using react.js,
-                                react native and angular.
-                                Created Front-End and Back-End based projects and complete website</li>
+                                react native and angular.Created Front-End and Back-End based projects and complete website</li>
                             <li><span>2023-current</span><br>web Development working on it.</li>
                             <li><span>2021-2022</span><br>Digital marketing.</li>
                             <li><span>2023-current</span><br>UI/UX Design working on it.</li>
@@ -247,8 +255,9 @@
                         <a href="https://www.linkedin.com/in/tabish-hussain-0722b5269/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/sttabish"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="tabish Resume.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Tabish Resume updated.pdf" download class="btn btn2">Download CV</a>
                 </div>
+                
                 <div class="contact-right" data-aos="fade-left" data-aos-delay="600">
                     <form>
                         <input type="text" name="Name" placeholder="Your Name" required>
@@ -313,6 +322,13 @@
             navbar.classlist.remove('active');
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"
+        integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"
+        integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </body>
 
